--- a/index.html
+++ b/index.html
@@ -1,31 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/style.css">
   <title>Frontend Mentor | Fylo data storage component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
+  <main>
 
-  You’ve used 815 GB of your storage
+    <div class="brand">
+      <div class="logo">
+        <a href="#"><img src="images/logo.svg" alt="logo"></a>
+      </div>
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+      <ul class="icons">
+        <li class="icon">
+          <a href="#"><img src="images/icon-document.svg" alt="icon-folder"></a>
+        </li>
+
+        <li class="document">
+          <a href="#"><img src="images/icon-folder.svg" alt="document"></a>
+        </li>
+
+        <li class="upload">
+          <a href="#"><img src="images/icon-upload.svg" alt="upload"></a>
+        </li>
+      </ul>
+    </div>
+
+
+    <div class="storage">
+
+      <div class="space-left">
+        <p class="counter">185 <span class="space-left-GB"> GB LEFT</span></p>
+      </div>
+      <p class="storage-text">You’ve used <span class="gb">815 GB</span> of your storage</p>
+      <div id="progressbar">
+        <div></div>
+      </div>
+
+      <div class="storage-counter">
+        <p class="min-gb">0 GB <span class="max-gb">1000 GB</span></p>
+      </div>
+
+     
+
+    </div>
+   
+  </main>
+  <!-- <footer>
+
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+          Coded by <a href="#">ProjectRevolution</a>.
+        </div>
+      </footer> -->
 </body>
+
 </html>
